--- a/app/.env
+++ b/app/.env
@@ -23,10 +23,10 @@ AUTH_TOKEN_PASSWORD=securePasswordHere
 
 # F R O N T
 APP_PORT=3000
-AXIOS_BASE_URL=http://192.168.100.150:3001/api
+AXIOS_BASE_URL=http://localhost:3001/api
 
 MQTT_PREFIX=ws://
-MQTT_HOST=192.168.100.150
+MQTT_HOST=localhost
 MQTT_PORT=8083
 
 
