--- a/services/.env
+++ b/services/.env
@@ -9,7 +9,9 @@ TZ=UTC
 MONGO_USERNAME=devuser
 MONGO_PASSWORD=devpassword
 MONGO_EXT_PORT=27017
-MONGO_DATABASE=parso_database
+MONGO_DATABASE=bits4bees_database
+
+LOCALHOST=192.168.100.150
 
 # EMQX
 EMQX_DEFAULT_USER_PASSWORD=emqxdashpass
