--- a/Device/platformio.ini
+++ b/Device/platformio.ini
@@ -18,3 +18,5 @@ monitor_flags = --raw
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.19.4
+	adafruit/DHT sensor library@^1.4.4
+	adafruit/Adafruit Unified Sensor@^1.1.5
