--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     docker:
       - image: circleci/openjdk:8-jdk
+      - image: cimg/python:3.8
     steps:
       - checkout
       - run:
