--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,30 @@
-version: 2
-general:
-  branches:
-    only:
-      - main
-      - staging
-      - dev
-jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:8-jdk
-      - image: cimg/python:3.8
+machine: true
     steps:
       - checkout
       - run:
-          name: Deploy
+          name: create workspace
+          command: mkdir -p /tmp/workspace
+      - run:
+          name: Install awsebcli package
           command: |
-            # 1- Install AWS CLI
-            curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-            unzip awscli-bundle.zip
-            ./awscli-bundle/install -b ~/bin/aws
-            # 2- Get the public IP of the current CircleCI runner
-            PUBLIC_IP=$(curl ipinfo.io/ip)
-            # 3- Get AWS Region# TODO Don't forget to replcae by your own Region
-            AWS_REGION=us-east-2
-            # 4- Get SG ID# TODO Don't forget to replace by your own SG ID
-            SG_ID=sg-0778694139ebe9411
-            # 5- Add an ingress rule to the security group
-            ~/bin/aws ec2 authorize-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
-              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
-            # 6- Give the ingress rule some time to propogate
-            sleep 5
-            # 7- SSH to the server to deploy
-            # TODO Change to your username
-            EC2_USERNAME=ec2
-            # TODO Change to your server's URL or public IP
-            EC2_PUBLIC_DNS=ec2-3-142-80-29.us-east-2.compute.amazonaws.com
-            ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS \
-            # other commands
-            # TODO Perform steps to deploy
-            # .
-            # .
-            # .
-            # 8- Remove the ingress rule
-            ~/bin/aws ec2 revoke-security-group-ingress --region $AWS_REGION --group-id $SG_ID \
-              --protocol tcp --port 22 --cidr $PUBLIC_IP/24
+            sudo apt-get -y -qq update
+            sudo apt-get install python-pip python-dev build-essential
+            sudo pip install --upgrade awsebcli
+            eb --version
+      - run:
+          name: installing dependencies
+          command: |
+            npm  install 
+      - run:
+          name: deploy 
+          command: |
+           bash deploy.sh
+      - run:
+          name: Removing aws config
+          command: |
+            rm -rf /home/circleci/.aws
+      - run: ls /tmp/workspace
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths:
+            - status.txt`
