Test circleci file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,13 @@
-machine: true
+version: 2
+general:
+  branches:
+    only:
+      - main
+      - staging
+      - dev
+jobs:
+  build:
+    machine: true
     steps:
       - checkout
       - run:
