--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           name: Install awsebcli package
           command: |
             sudo apt-get -y -qq update
-            sudo apt-get install python-pip build-essential python3-pip
+            sudo apt-get install build-essential python3-pip
             sudo pip install --upgrade awsebcli
             eb --version
       - run:
