--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - "localhost:${LOCALHOST}"
 
     environment:
-      EMQX_NAME: parso_broker
+      EMQX_NAME: bits4bees_broker
       EMQX_HOST: 127.0.0.1
 
       TZ: "${TZ}"
