--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - mongo
 
     extra_hosts:
-      - "localhost:${LOCALHOST}"
+      - "localhost:${HOST}"
 
     environment:
       EMQX_NAME: bits4bees_broker
