--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -15,7 +15,7 @@ services:
     restart: always
     working_dir: /home/ec2-user/app
     volumes:
-      - ./app/:/home/ec2-user/app
+      - ./app/:/home/node/app
     ports:
       - "3000:3000"
       - "3001:3001"
