--- a/services/docker_nuxt_build.yml
+++ b/services/docker_nuxt_build.yml
@@ -8,7 +8,7 @@ services:
     image: "node:14"
     working_dir: /home/ec2-user/app
     volumes:
-      - ./app/:/home/ec2-user/app
+      - ./app/:/home/node/app
 
 
     command: sh -c "npm run build"
