--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
     - echo Build started on `date` 
     - echo Building the Docker image... 
     # update the following line with the name of your own ECR repository
-    - docker-compose -f services/docker_compose_production.yml -f docker_compose_production.yml build
+    - docker-compose -f services/docker_compose_production.yml build
     # update the following line with the URI of your own ECR repository (view the Push Commands in the console)
     - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
   post_build: 
