--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,8 @@ phases:
     - REPOSITORY_URI=363359022847.dkr.ecr.us-east-2.amazonaws.com/emqx
   build: 
     commands: 
+    - echo docker-compose version
+    - docker-compose --version
     - echo Build started on `date` 
     - echo Building the Docker image... 
     # update the following line with the name of your own ECR repository
