--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,13 +25,14 @@ phases:
     # update  the following line with the name of your own ECR repository
     - docker-compose -f ./services/docker_compose_production.yml build
     # update the following line with the URI of your own ECR repository (view the Push Commands in the console)
-    - docker tag $REPOSITORY_URI $REPOSITORY_URI:$IMAGE_TAG 
+    #- docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+    - docker tag $REPOSITORY_URI $REPOSITORY_URI 
   post_build: 
     commands: 
     - echo Build completed on `date` 
     - echo pushing to repo
     # update the following line with the URI of your own ECR repository
-    - docker push $REPOSITORY_URI
+    - docker push $REPOSITORY_URI:latest
     - docker push $REPOSITORY_URI:$IMAGE_TAG
     - echo Writing image definitions file... 
     #- printf '[{"ImageURI":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
