--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -1,10 +1,13 @@
-version: "3.7"
-
+version: "3.8"
+#
 volumes:
   vol-emqx-data:
     name: foo-emqx-data
+#  vol-emqx-etc:
+#    name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
+#
 
 
 services:
@@ -12,8 +15,6 @@ services:
     container_name: mongo
     image: mongo:4.4
     restart: always
-    logging:
-      driver: "none"
     environment:
       TZ: "${TZ}"
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
@@ -27,10 +28,10 @@ services:
     container_name: emqx
     image: emqx/emqx:4.2.3
     restart: always
-
     ports:
       - 18083:18083
       - 1883:1883
+      - 8883:8883
       - 8083:8083
       - 8085:8081
 
@@ -38,7 +39,6 @@ services:
       - vol-emqx-data:/opt/emqx/data
       - vol-emqx-log:/opt/emqx/log
 
-  
     links:
       - mongo
 
@@ -112,4 +112,4 @@ services:
 
       # listener.wss.external.max_connections
       EMQX_LISTENER__WSS__EXTERNAL__MAX_CONNECTIONS: 16
-
+      
