--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,7 +29,8 @@ phases:
     - echo ----AVAILABLE IMAGES----
     - aws ecr list-images --repository-name "emqx"  --region us-east-2
     # update the following line with the URI of your own ECR repository (view the Push Commands in the console)
-    - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+    - docker tag emqx $REPOSITORY_URI/eqmx:latest
+    - docker tag mongo $REPOSITORY_URI/mongo:latest
     #- docker tag $REPOSITORY_URI $REPOSITORY_URI 
   post_build: 
     commands: 
