--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -11,11 +11,11 @@ services:
 
   node:
     container_name: node
-    image: "node:14"
+    image: "nuxt_app:latest"
     restart: always
-    working_dir: /home/ec2-user/app
+    working_dir: /usr/src/nuxt-app
     volumes:
-      - ./app/:/home/node/app
+      - ./nuxtdata/:/usr/src/nuxtdata
     ports:
       - "3000:3000"
       - "3001:3001"
@@ -55,8 +55,8 @@ services:
       - 8085:8081
 
     volumes:
-      - vol-emqx-data:/opt/emqx/data
-      - vol-emqx-log:/opt/emqx/log
+      - ./vol-emqx-data:/opt/emqx/data
+      - ./vol-emqx-log:/opt/emqx/log
 
   
     links:
