--- a/app/dockerfile
+++ b/app/dockerfile
@@ -16,8 +16,28 @@ EXPOSE 3001
 EXPOSE 3002
 
 # ENV HOST = 0.0.0.0
-
 # ENV PORT = 3000
+
+ENV API_PORT = ${API_PORT}
+ENV WEBHOOKS_HOST = ${WEBHOOKS_HOST}
+ENV HOST = ${HOST}
+ENV MONGO_USERNAME = ${MONGO_USERNAME}
+ENV MONGO_PASSWORD = ${MONGO_PASSWORD}
+ENV MONGO_HOST = ${MONGO_HOST}
+ENV MONGO_PORT = ${MONGO_PORT}
+ENV MONGO_DATABASE = ${MONGO_DATABASE}
+ENV EMQX_DEFAULT_APPLICATION_SECRET = ${EMQX_DEFAULT_APPLICATION_SECRET}
+ENV EMQX_NODE_SUPERUSER_USER = ${EMQX_NODE_SUPERUSER_USER}
+ENV EMQX_NODE_SUPERUSER_PASSWORD = ${EMQX_NODE_SUPERUSER_PASSWORD}
+ENV EMQX_API_TOKEN = ${EMQX_API_TOKEN}
+ENV AUTH_TOKEN_PASSWORD = ${AUTH_TOKEN_PASSWORD}
+ENV EMQX_RESOURCES_DELAY = ${EMQX_RESOURCES_DELAY}
+ENV APP_PORT = ${APP_PORT}
+ENV AXIOS_BASE_URL = ${AXIOS_BASE_URL}
+ENV MQTT_PORT = ${MQTT_PORT}
+ENV MQTT_HOST = ${MQTT_HOST}
+ENV MQTT_PREFIX = ${MQTT_PREFIX}
+ENV SSLREDIRECT = ${SSLREDIRECT}
 
 CMD [ "npm","start" ]
 
