--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -24,9 +24,11 @@ services:
       MONGO_HOST: ${MONGO_HOST}
       MONGO_PORT: ${MONGO_PORT}
       MONGO_DATABASE: ${MONGO_DATABASE}
+      EMQX_DEFAULT_APPLICATION_SECRET: ${EMQX_DEFAULT_APPLICATION_SECRET}
       EMQX_NODE_SUPERUSER_USER: ${EMQX_NODE_SUPERUSER_USER}
       EMQX_NODE_SUPERUSER_PASSWORD: ${EMQX_NODE_SUPERUSER_PASSWORD}
       EMQX_API_TOKEN: ${EMQX_API_TOKEN}
+      AUTH_TOKEN_PASSWORD: ${AUTH_TOKEN_PASSWORD}
       EMQX_RESOURCES_DELAY: ${EMQX_RESOURCES_DELAY}
       APP_PORT: ${APP_PORT}
       AXIOS_BASE_URL: ${AXIOS_BASE_URL}
