--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
 
     - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
     - IMAGE_TAG=${COMMIT_HASH:=latest}
-    - REPOSITORY_URI=363359022847.dkr.ecr.us-east-2.amazonaws.com/emqx
+    - REPOSITORY_URI=363359022847.dkr.ecr.us-east-2.amazonaws.com/dashboard
   build: 
     commands: 
     - echo docker-compose version
@@ -23,23 +23,26 @@ phases:
     - echo Build started on `date` 
     - echo Building the Docker image... 
     # update  the following line with the name of your own ECR repository
-    - docker-compose -f ./services/docker_compose_production.yml build
+    #- docker-compose -f ./services/docker_compose_production.yml build
 
     #View available images
     - echo ----AVAILABLE IMAGES----
-    - aws ecr list-images --repository-name "emqx"  --region us-east-2
+    - aws ecr list-images --repository-name "dashboard"  --region us-east-2
     # update the following line with the URI of your own ECR repository (view the Push Commands in the console)
-    - docker tag emqx $REPOSITORY_URI/eqmx:latest
-    - docker tag mongo $REPOSITORY_URI/mongo:latest
+    - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG ./services
+    #- docker tag emqx $REPOSITORY_URI/eqmx:latest
+    #- docker tag mongo $REPOSITORY_URI/mongo:latest
     #- docker tag $REPOSITORY_URI $REPOSITORY_URI 
+    - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
   post_build: 
     commands: 
     - echo Build completed on `date` 
     - echo pushing to repo
     # update the following line with the URI of your own ECR repository
-    - docker push $REPOSITORY_URI:latest
-    - docker push $REPOSITORY_URI:$IMAGE_TAG
+    #- docker push $REPOSITORY_URI:latest
+    #- docker push $REPOSITORY_URI:$IMAGE_TAG
     #- docker push $REPOSITORY_URI
+    docker push $REPOSITORY_URI:$IMAGE_TAG
     - echo Writing image definitions file... 
     #- printf '[{"ImageURI":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
     - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
