--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: ./
     destination: /home/ec2-user
+file_exists_behavior: OVERWRITE
 #Se pueden copiar varios archivos
 #  - source: source
 #    destination: /webapps/myApp
