Actualizar appspec.yml

--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,7 @@ hooks:
   ApplicationStart:
     - location: ./aws-deploy.sh
       timeout: 3600
+      runas: ec2-user
   ValidateService:
     - location: Scripts/MonitorService.sh
       timeout: 3600
