--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: ./
-    destination: /home/ec2-user
+    destination: /home/ec2-user/bits4bees
 file_exists_behavior: OVERWRITE
 #Se pueden copiar varios archivos
 #  - source: source
