--- a/services/.env copy
+++ b/services/.env copy
@@ -8,7 +8,7 @@ MONGO_USERNAME=admin
 MONGO_PASSWORD=eeM1MFHsgxrIZA9FgJHO
 MONGO_EXT_PORT=27017
 MONGO_DATABASE=5C6USUpZ5RaHXvHp9OSZ
-HOST=192.168.100.150
+HOST=3.15.180.51
 
 # E M Q X
 EMQX_DEFAULT_USER_PASSWORD=AkYygF2FxCvDaCGXvnWH
@@ -16,7 +16,7 @@ EMQX_DEFAULT_APPLICATION_SECRET=gTMDMAMhXNr3maXS0vrx
 #A P I  - N O D E
 API_PORT=3001
 WEBHOOKS_HOST=node
-HOST=192.168.100.150
+HOST=3.15.180.51
 
 # M O N G O
 MONGO_USERNAME=admin
@@ -35,9 +35,9 @@ EMQX_RESOURCES_DELAY=30000
 AUTH_TOKEN_PASSWORD=securePasswordHere
 
 # F R O N T
-APP_PORT=3001
-AXIOS_BASE_URL=http://192.168.100.150:3001/api
+APP_PORT=3000
+AXIOS_BASE_URL=http://ec2-3-15-180-51.us-east-2.compute.amazonaws.com:3001/api
 MQTT_PORT=8083
-MQTT_HOST=192.168.100.150
+MQTT_HOST=ec2-3-15-180-51.us-east-2.compute.amazonaws.com
 MQTT_PREFIX=ws://
 SSLREDIRECT=false
