--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -76,8 +76,8 @@ services:
       - 8085:8081
 
     volumes:
-      - ~/data/vol-emqx-data:/opt/emqx/data
-      - ~/data/vol-emqx-log:/opt/emqx/log
+      - ./vol-emqx-data:/opt/emqx/data
+      - ./vol-emqx-log:/opt/emqx/log
 
     links:
       - mongo
