--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -76,8 +76,8 @@ services:
       - 8085:8081
 
     volumes:
-      - ./vol-emqx-data:/emqx/data
-      - ./vol-emqx-log:/emqx/log
+      - ./vol-emqx-data:/opt/emqx/data
+      - ./vol-emqx-log:/opt/emqx/log
 
     links:
       - mongo
@@ -133,23 +133,23 @@ services:
       EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
 
       # listener.tcp.external.max_connections
-      EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 10
+      EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 100
       
       # listener.tcp.internal.max_connections
-      EMQX_LISTENER__TCP__INTERNAL__MAX_CONNECTIONS: 11
+      EMQX_LISTENER__TCP__INTERNAL__MAX_CONNECTIONS: 100
 
       # dashboard.listener.https.max_clients
-      EMQX_DASHBOARD__LISTENER__HTTP__MAX_CLIENTS: 12
+      EMQX_DASHBOARD__LISTENER__HTTP__MAX_CLIENTS: 100
       
       # management.listener.http.max_clients
-      EMQX_MANAGEMENT__LISTENER__HTTP__MAX_CLIENTS: 13
+      EMQX_MANAGEMENT__LISTENER__HTTP__MAX_CLIENTS: 2
       
       # listener.ssl.external.max_connections
-      EMQX_LISTENER__SSL__EXTERNAL__MAX_CONNECTIONS: 14
+      EMQX_LISTENER__SSL__EXTERNAL__MAX_CONNECTIONS: 100
 
       # listener.ws.external.max_connections
-      EMQX_LISTENER__WS__EXTERNAL__MAX_CONNECTIONS: 15
+      EMQX_LISTENER__WS__EXTERNAL__MAX_CONNECTIONS: 100
 
       # listener.wss.external.max_connections
-      EMQX_LISTENER__WSS__EXTERNAL__MAX_CONNECTIONS: 16
+      EMQX_LISTENER__WSS__EXTERNAL__MAX_CONNECTIONS: 100
       
