--- a/services/docker_compose_production.yml
+++ b/services/docker_compose_production.yml
@@ -1,55 +1,55 @@
-version: "3.7"
+version: "3.8"
 #
 volumes:
   vol-emqx-data:
     name: foo-emqx-data
-#  vol-emqx-etc:
-#    name: foo-emqx-etc
+# vol-emqx-etc:
+  # name: foo-emqx-etc
   vol-emqx-log:
     name: foo-emqx-log
-#
+
 
 
 services:
-  node:
-    container_name: node
-    image: "nuxt_app:latest"
-    restart: always
-    environment:
-      API_PORT: ${API_PORT}
-      WEBHOOKS_HOST: ${WEBHOOKS_HOST}
-      HOST: ${HOST}
-      MONGO_USERNAME: ${MONGO_USERNAME}
-      MONGO_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_HOST: ${MONGO_HOST}
-      MONGO_PORT: ${MONGO_PORT}
-      MONGO_DATABASE: ${MONGO_DATABASE}
-      EMQX_DEFAULT_APPLICATION_SECRET: ${EMQX_DEFAULT_APPLICATION_SECRET}
-      EMQX_NODE_SUPERUSER_USER: ${EMQX_NODE_SUPERUSER_USER}
-      EMQX_NODE_SUPERUSER_PASSWORD: ${EMQX_NODE_SUPERUSER_PASSWORD}
-      EMQX_API_TOKEN: ${EMQX_API_TOKEN}
-      AUTH_TOKEN_PASSWORD: ${AUTH_TOKEN_PASSWORD}
-      EMQX_RESOURCES_DELAY: ${EMQX_RESOURCES_DELAY}
-      APP_PORT: ${APP_PORT}
-      AXIOS_BASE_URL: ${AXIOS_BASE_URL}
-      MQTT_PORT: ${MQTT_PORT}
-      MQTT_HOST: ${MQTT_HOST}
-      MQTT_PREFIX: ${MQTT_PREFIX}
-      SSLREDIRECT: ${SSLREDIRECT}
-    working_dir: /usr/src/nuxt-app
-    volumes:
-      - ~/data/nuxtdata/:/usr/src/nuxtdata
-    ports:
-      - "3000:3000"
-      - "3001:3001"
-      - "80:3002"
+  # node:
+  #   container_name: node
+  #   image: "nuxt_app:latest"
+  #   restart: always
+  #   # environment:
+  #   #   API_PORT: ${API_PORT}
+  #   #   WEBHOOKS_HOST: ${WEBHOOKS_HOST}
+  #   #   HOST: ${HOST}
+  #   #   MONGO_USERNAME: ${MONGO_USERNAME}
+  #   #   MONGO_PASSWORD: ${MONGO_PASSWORD}
+  #   #   MONGO_HOST: ${MONGO_HOST}
+  #   #   MONGO_PORT: ${MONGO_PORT}
+  #   #   MONGO_DATABASE: ${MONGO_DATABASE}
+  #   #   EMQX_DEFAULT_APPLICATION_SECRET: ${EMQX_DEFAULT_APPLICATION_SECRET}
+  #   #   EMQX_NODE_SUPERUSER_USER: ${EMQX_NODE_SUPERUSER_USER}
+  #   #   EMQX_NODE_SUPERUSER_PASSWORD: ${EMQX_NODE_SUPERUSER_PASSWORD}
+  #   #   EMQX_API_TOKEN: ${EMQX_API_TOKEN}
+  #   #   AUTH_TOKEN_PASSWORD: ${AUTH_TOKEN_PASSWORD}
+  #   #   EMQX_RESOURCES_DELAY: ${EMQX_RESOURCES_DELAY}
+  #   #   APP_PORT: ${APP_PORT}
+  #   #   AXIOS_BASE_URL: ${AXIOS_BASE_URL}
+  #   #   MQTT_PORT: ${MQTT_PORT}
+  #   #   MQTT_HOST: ${MQTT_HOST}
+  #   #   MQTT_PREFIX: ${MQTT_PREFIX}
+  #   #   SSLREDIRECT: ${SSLREDIRECT}
+  #   # working_dir: /usr/src/nuxt-app
+  #   volumes:
+  #     - ./nuxtdata/:/usr/src/nuxtdata
+  #   ports:
+  #     - "3000:3000"
+  #     - "3001:3001"
+  #     - "80:3002"
 
-    links:
-      - emqx
-      - mongo
+  #   links:
+  #     - emqx
+  #     - mongo
 
-    command: sh -c "echo 'delaying 30 seconds' && sleep 30 && npm run start"
-    #command: sh -c "npm install"
+  #   command: sh -c "echo 'delaying 30 seconds' && sleep 30 && npm run start"
+  #   #command: sh -c "npm install"
 
   mongo:
     container_name: mongo
@@ -60,7 +60,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
     volumes:
-      - ~/data/mongodata:/data/db
+      - ./mongodata:/data/db
     ports:
       - ${MONGO_EXT_PORT}:27017
 
@@ -76,8 +76,8 @@ services:
       - 8085:8081
 
     volumes:
-      - ~/data/vol-emqx-data:/opt/emqx/data
-      - ~/data/vol-emqx-log:/opt/emqx/log
+      - ./vol-emqx-data:/opt/emqx/data
+      - ./vol-emqx-log:/opt/emqx/log
 
     links:
       - mongo
@@ -133,23 +133,23 @@ services:
       EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
 
       # listener.tcp.external.max_connections
-      EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 100
+      EMQX_LISTENER__TCP__EXTERNAL__MAX_CONNECTIONS: 10
       
       # listener.tcp.internal.max_connections
-      EMQX_LISTENER__TCP__INTERNAL__MAX_CONNECTIONS: 100
+      EMQX_LISTENER__TCP__INTERNAL__MAX_CONNECTIONS: 10
 
       # dashboard.listener.https.max_clients
-      EMQX_DASHBOARD__LISTENER__HTTP__MAX_CLIENTS: 100
+      EMQX_DASHBOARD__LISTENER__HTTP__MAX_CLIENTS: 10
       
       # management.listener.http.max_clients
-      EMQX_MANAGEMENT__LISTENER__HTTP__MAX_CLIENTS: 2
+      EMQX_MANAGEMENT__LISTENER__HTTP__MAX_CLIENTS: 5
       
       # listener.ssl.external.max_connections
-      EMQX_LISTENER__SSL__EXTERNAL__MAX_CONNECTIONS: 100
+      EMQX_LISTENER__SSL__EXTERNAL__MAX_CONNECTIONS: 10
 
       # listener.ws.external.max_connections
-      EMQX_LISTENER__WS__EXTERNAL__MAX_CONNECTIONS: 100
+      EMQX_LISTENER__WS__EXTERNAL__MAX_CONNECTIONS: 10
 
       # listener.wss.external.max_connections
-      EMQX_LISTENER__WSS__EXTERNAL__MAX_CONNECTIONS: 100
+      EMQX_LISTENER__WSS__EXTERNAL__MAX_CONNECTIONS: 10
       
