update docker compose

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -11,6 +11,39 @@ volumes:
 
 
 services:
+  node:
+    container_name: node
+    image: "nuxt_app:latest"
+    restart: always
+    # working_dir: /usr/src/nuxt-app
+    volumes:
+      - ./nuxtdata/:/usr/src/nuxtdata
+    ports:
+      - "3000:3000"
+      - "3001:3001"
+      - "80:3002"
+
+    links:
+      - emqx
+      - mongo
+
+    command: sh -c "echo 'delaying 30 seconds' && sleep 30 && npm run start"
+    #command: sh -c "npm install"
+
+  mongo:
+    container_name: mongo
+    image: mongo:4.4
+    restart: always
+    environment:
+      TZ: "${TZ}"
+      MONGO_INITDB_ROOT_USERNAME: "${MONGO_USERNAME}"
+      MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
+    volumes:
+      - ./mongodata:/data/db
+    ports:
+      - ${MONGO_EXT_PORT}:27017
+
+
   mongo:
     container_name: mongo
     image: mongo:4.4
